# philosophers

./: .gitignore  CMakeLists.txt
philo/: Makefile  philo.h
philo/srcs/: ft_atoi.c  main.c  philo_action.c  philo_conditions.c  philo_func.c  philo_get_time.c  philo_watcher_func.c  philosophers_print.c  print_philosopher.c  utils.c  utils_2.c
philo_bonus/: Makefile  philo.h
philo_bonus/srcs/: ft_strlcpy.c  ft_strlen.c  ft_usleep.c  main.c  parse.c  philo_action.c  philo_func.c  philo_monitor.c  philo_start.c  philosophers_destroy.c  philosophers_init.c  philosophers_start.c  print_philosopher.c
philo_new/: philo
philo_new/srcs/: main.c  philo_action.c  philo_func.c  philo_monitor.c  philosophers_destroy.c  philosophers_init.c  philosophers_join.c  philosophers_start.c
